[gd_scene load_steps=3 format=3 uid="uid://b24tbqxcq3npu"]

[ext_resource type="Script" uid="uid://bk2vcfyvr874h" path="res://Line_chart_V0.gd" id="1_75luo"]
[ext_resource type="Script" uid="uid://yt61ntgdyruy" path="res://line_plot.gd" id="2_cvtg2"]

[node name="Line_Chart_v0" type="GridContainer"]
offset_right = 519.0
offset_bottom = 282.0
columns = 3
script = ExtResource("1_75luo")

[node name="y_label" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "y_label_text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="y_ticks_cont" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="line_plot" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_cvtg2")

[node name="Chart BG" type="ColorRect" parent="line_plot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="placeholder" type="Control" parent="."]
layout_mode = 2

[node name="placeholder2" type="Control" parent="."]
layout_mode = 2

[node name="x_ticks_cont" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="placeholder3" type="Control" parent="."]
layout_mode = 2

[node name="placeholder4" type="Control" parent="."]
layout_mode = 2

[node name="x_label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "x_label_text"
horizontal_alignment = 1
vertical_alignment = 1
